--- a/css/style.css
+++ b/css/style.css
@@ -462,3 +462,9 @@ html {
     max-width: 100%;
     border-radius: 15px;
 }
+
+.footnote {
+    opacity: 0.5 !important;
+    font-size: 14px !important;
+    text-align: center !important;
+}
