--- a/css/style.css
+++ b/css/style.css
@@ -468,3 +468,81 @@ html {
     font-size: 14px !important;
     text-align: center !important;
 }
+  
+.tree {
+top: -25px;
+position: relative;
+font-family: 'Roboto Mono', monospace;
+font-size: .80rem;
+font-weight: 400;
+line-height: 1.5;
+color: #fff;
+width:100%;
+
+span {
+    font-size: 13px;
+    font-style: italic;
+    letter-spacing: .4px;
+    color: #a8a8a8;
+}
+
+.fa-folder-open, .fa-folder {
+    color: #007bff;
+}
+
+.fa-html5 {
+    color: #f21f10;
+}
+
+ul {
+    padding-left: 5px;
+    list-style: none;
+    
+    li {
+    position: relative;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 15px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    
+    &:before {
+        position: absolute;
+        top: 15px;
+        left: 0;
+        width: 10px;
+        height: 1px;
+        margin: auto;
+        content: '';
+        background-color: #666;
+    }
+    
+    &:after {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 1px;
+        height: 100%;
+        content: '';
+        background-color: #666;
+    }
+    
+    &:last-child:after {
+        height: 15px;
+    }
+    }
+    
+    a {
+    cursor: pointer;
+    
+    &:hover {
+        text-decoration: none;
+    }
+    }
+    a:hover {
+        color:#007bff;
+    }
+}
+}
